# tm_framework

./: .gitignore  DATA_OVERVIEW.md  Pipfile  dagster.yaml  pyproject.toml
src/db/: install  phd.user.sql  topic_modelling.schema.sql
src/db/migrations/: 20250225_add_embedding_unique_constraint.sql  20250313_add_document_parent_column.sql  add_topic_models.sql  add_vector_to_vocabulary_word_embedding.sql
src/python/: DB_README.md  batch_embeddings.py  batch_processor.py  config.py  configuration.py  corpus.py  database.py  db_document_store.py  embed_corpora.py  fasttext_word_embeddings.py  hf_embedder.py  models.py  octis_example_lda.py  octis_preprocessing.py  preprocessing.py  preprocessing_pipeline.py  preprocessing_pipelines.py  preprocessor.py  wiki_dataset.py
src/python/dagster_pipelines/: chunking.py  corpus_ingestion.py  definitions.py  preprocessing.py
src/python/maintained_code/: ctm.py
src/python/openai_embeddings/: batch.py  cache.py  from_db.py
src/python/outputs/: performance_features_tables.py  projection_plots.py  result_tables.py  results.py
src/python/outputs/results_output/: algorithm_heatmaps.tex  pareto_plots.tex  pareto_table.tex  performance_summary.tex  rank_summary.tex
src/python/pipelines/: README.md  delete_corpus.sql
src/python/pipelines/boe_01_chunking/: main.py  schema.sql
src/python/pipelines/boe_02_model_embedding/: main.py  schema.sql
src/python/pipelines/boe_03_dim_red/: main.py  schema.sql
src/python/pipelines/boe_04_doc_embedding/: main.py  schema.sql
src/python/pipelines/boe_04_word_embedding/: main.py  schema.sql
src/python/pipelines/boe_05_doc_embedding/: schema.sql
src/python/pipelines/boe_05_word_embedding/: main.py  schema.sql
src/python/scripts/: tokeniser_tests.py
src/python/shared_code/: __init__.py  custom_logging.py  hashing.py
src/python/tests/: config_test.py  conftest.py  database_test.py  models_test.py  preprocessing_test.py
src/python/topic_models/: BERTopic.py  LDA.py  ZeroShotTM.py  tm_pipelines.py
(+67 files in other folders)
