[project]
name = "tm_framework"
version = "0.0.1"
requires-python = "~=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "numpy",
    "pandas",
    "scipy",
    "psycopg2-binary",
    "sentence-transformers",
    "bertopic",
    "topmost",
    "gensim",
    "spacy>=3.8.4",
    "pip>=24.3.1",
]

[dependency-groups]
dev = [
    "pytest",
    "snakeviz",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
