[project]
name = "tm_framework"
version = "0.0.1"
requires-python = "~=3.11.0"
dependencies = [
    "sqlalchemy>=2.0",
    "numpy",
    "pandas",
    "scipy",
    "psycopg2-binary",
    "sentence-transformers",
    "bertopic",
    "topmost",
    "gensim",
    "spacy>=3.8.4",
    "pip>=24.3.1",
    "datasets>=3.2.0",
    "openai>=1.61.1",
    "tiktoken>=0.8.0",
    "fasttext>=0.9.3",
    "turftopic>=0.11.0",
    "pyro-ppl>=1.9.1",
    "duckdb>=1.2.1",
    "matplotlib>=3.10.1",
    "dagster>=1.10.6",
    "dagster-webserver>=1.10.6",
    "scikit-learn>=1.7.2",
    "umap-learn>=0.5.9.post2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest",
    "ruff>=0.14.11",
    "snakeviz",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"


[tool.mypy]
mypy_path = "src/python"

[tool.dagster]
module_name = "dagster_pipelines.definitions"
code_location_name = "src/python"
